--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "glamor": "2.20.40",
     "glamorous": "4.9.7",
     "graphql-tag": "2.4.2",
-    "ramda": "0.24.1",
+    "ramda": "0.25.0",
     "react": "16.0.0",
     "react-apollo": "1.4.16",
     "react-dom": "16.0.0",
-    "react-modal": "2.3.2",
-    "react-motion": "0.5.1",
+    "react-modal": "3.0.3",
+    "react-motion": "0.5.2",
     "react-router-dom": "4.2.2",
-    "react-router-transition": "1.1.0",
+    "react-router-transition": "1.1.1",
     "react-timeago": "3.4.3",
-    "recompose": "0.25.1"
+    "recompose": "0.26.0"
   },
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "babel-preset-flow": "6.23.0",
-    "eslint": "4.8.0",
+    "eslint": "4.9.0",
     "eslint-config-mkitt": "2.1.0",
     "flow-bin": "0.52.0",
     "react-addons-test-utils": "15.6.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
   },
   "babel": {
     "presets": [
