--- a/.flowconfig
+++ b/.flowconfig
@@ -1,12 +1,12 @@
 [ignore]
-.*/node_modules/fbjs/.*
-.*/node_modules/babel-plugin-transform-react-remove-prop-types/src/index.js
-.*/node_modules/mitt/src/index.js
-.*/node_modules/react-motion/.*
+.*/node_modules/graphql/.*
+.*/node_modules/react-apollo/react-apollo.umd.js.flow
+.*/node_modules/react-timeago/lib/index.js.flow
 
 [include]
 
 [libs]
+<PROJECT_ROOT>/src/types
 
 [lints]
 all=warn
