Adds vendor flow-types

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "react-scripts build",
     "flow": "flow ./src",
+    "flow-typed": "flow-typed install --overwrite --skip",
     "lint": "eslint ./src",
     "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom"
@@ -35,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
     "flow-bin": "0.57.3",
+    "flow-typed": "2.2.3",
     "jest-glamor-react": "3.1.2",
     "react-addons-test-utils": "15.6.2",
     "react-scripts": "1.0.14",
@@ -65,7 +67,10 @@
     "rules": {
       "object-curly-newline": "off",
       "react/jsx-filename-extension": "off",
-      "semi": ["error", "never"]
+      "semi": [
+        "error",
+        "never"
+      ]
     }
   },
   "jest": {
