--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-transition": "1.1.1",
     "react-timeago": "3.4.3",
     "recompose": "0.26.0",
+    "styled-system": "1.0.8",
     "toolkitt": "1.0.0"
   },
   "devDependencies": {
