--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "test": "react-scripts test --env=jsdom"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "1.1.2",
+    "apollo-client": "2.1.0",
+    "apollo-link-http": "1.3.0",
     "glamor": "2.20.40",
     "glamorous": "4.11.0",
+    "graphql": "0.11.7",
+    "graphql-tag": "2.5.0",
     "ramda": "0.25.0",
     "react": "16.2.0",
-    "react-apollo": "1.4.16",
+    "react-apollo": "2.0.1",
     "react-dom": "16.2.0",
     "react-modal": "3.1.6",
     "react-motion": "0.5.2",
