--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "apollo-cache-inmemory": "1.1.2",
     "apollo-client": "2.1.0",
+    "apollo-link": "1.0.5",
     "apollo-link-http": "1.3.0",
+    "apollo-link-logger": "1.0.4",
     "glamor": "2.20.40",
     "glamorous": "4.11.0",
     "graphql": "0.11.7",
