--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glamorous": "4.11.2",
     "graphql": "0.12.3",
     "graphql-tag": "2.6.1",
+    "humps": "2.0.1",
     "ramda": "0.25.0",
     "react": "16.2.0",
     "react-apollo": "2.0.4",
