Update package.json homepage key

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apply-webapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mkitt.net/apply-webapp/",
+  "homepage": "https://turingschool.github.io/apply-webapp/",
   "scripts": {
     "build": "react-scripts build",
     "flow": "flow ./src",
