--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.5.1",
     "flow-bin": "0.63.1",
+    "gh-pages": "1.1.0",
     "jest-glamor-react": "3.2.2",
     "react-addons-test-utils": "15.6.2",
     "react-scripts": "1.0.17",
