--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://turingschool.github.io/apply-webapp/",
   "scripts": {
     "build": "react-scripts build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build --repo https://$GITHUB_TOKEN@github.com/turingschool/apply-webapp.git",
     "flow": "flow ./src",
     "lint": "eslint ./src",
     "start": "react-scripts start",
