--- a/package.json
+++ b/package.json
@@ -17,36 +17,37 @@
     "apollo-link": "1.0.7",
     "apollo-link-http": "1.3.2",
     "glamor": "2.20.40",
-    "glamorous": "4.11.2",
+    "glamorous": "4.11.4",
     "graphql": "0.12.3",
     "graphql-tag": "2.6.1",
+    "gridzzly": "1.0.0",
     "humps": "2.0.1",
     "ramda": "0.25.0",
     "react": "16.2.0",
     "react-apollo": "2.0.4",
     "react-dom": "16.2.0",
-    "react-modal": "3.1.10",
+    "react-modal": "3.1.11",
     "react-motion": "0.5.2",
     "react-router-dom": "4.2.2",
-    "react-router-transition": "1.1.3",
+    "react-router-transition": "1.2.0",
     "react-timeago": "3.4.3",
     "recompose": "0.26.0",
     "styled-system": "1.1.1"
   },
   "devDependencies": {
-    "babel-eslint": "8.1.2",
+    "babel-eslint": "8.2.1",
     "babel-preset-flow": "6.23.0",
-    "eslint": "4.15.0",
+    "eslint": "4.16.0",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-flowtype": "2.41.0",
+    "eslint-plugin-flowtype": "2.42.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.5.1",
-    "flow-bin": "0.63.1",
+    "eslint-plugin-react": "7.6.1",
+    "flow-bin": "0.64.0",
     "gh-pages": "1.1.0",
-    "jest-glamor-react": "3.2.2",
+    "jest-glamor-react": "3.3.0",
     "react-addons-test-utils": "15.6.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "1.1.0",
     "react-test-renderer": "16.2.0"
   },
   "babel": {
