Try the custom url again

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apply-webapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://turingschool.github.io/apply-webapp/",
+  "homepage": "http://mortarboard.turing.io",
   "scripts": {
     "build": "react-scripts build",
     "deploy": "gh-pages -d build --repo https://$GITHUB_TOKEN@github.com/turingschool/apply-webapp.git",
