--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "apply-webapp",
+  "name": "mortarboard",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://mortarboard.turing.io",
   "scripts": {
     "build": "react-scripts build",
-    "deploy": "gh-pages -d build --repo https://$GITHUB_TOKEN@github.com/turingschool/apply-webapp.git",
+    "deploy": "gh-pages -d build --repo https://$GITHUB_TOKEN@github.com/turingschool/mortarboard.git",
     "flow": "flow ./src",
     "lint": "eslint ./src",
     "start": "react-scripts start",
