Try a deployment to aws staging
Remove the home page from package.json to trigger relative paths from
the build.

--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,5 @@ deployment:
   staging:
     branch: master
     commands:
-      - git config --global user.email robots@circleci.com
-      - git config --global user.name CircleCI
       - yarn build
-      - yarn deploy
+      - aws s3 sync build/ s3://turing-mortarboard-staging --delete
