--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-cache-inmemory": "1.1.7",
     "apollo-client": "2.2.2",
     "apollo-link": "1.0.7",
+    "apollo-link-error": "1.0.7",
     "apollo-link-http": "1.3.2",
     "glamor": "2.20.40",
     "glamorous": "4.11.4",
